--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="btn_home">btn_home</string>
     <string name="btn_profile">btn_profile</string>
     <string name="btn_settings">btn_settings</string>
+    <string name="pesquisar">Pesquisar...</string>
 </resources>
